--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@
     border: 1px solid #000;
     margin: 10px 5px 0 0;
   }
+
+html, body, #map-canvas {
+        height: 300px;
+        margin: 0px;
+        padding: 0px
+      }
