--- a/style.css
+++ b/style.css
@@ -9,3 +9,13 @@ html, body, #map-canvas {
         margin: 0px;
         padding: 0px
       }
+
+#splash-screen {
+  	background: url('loading.gif') 50% 50% no-repeat rgb(55, 65, 84);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	top: 0;
+	z-index: 10;
+}
