--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ html, body, #map-canvas {
       }
 
 #splash-screen {
-  	background: url('loading.gif') 50% 50% no-repeat rgb(55, 65, 84);
+  background: url('loading.gif') 50% 50% no-repeat rgb(55, 65, 84);
+  background-image: url("headerlogo.png") 50% 50%; 
 	position: absolute;
 	bottom: 0;
 	left: 0;
