--- a/style.css
+++ b/style.css
@@ -10,9 +10,15 @@ html, body, #map-canvas {
         padding: 0px
       }
 
+#logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40vh;
+}
+
 #splash-screen {
   background: url('loading.gif') 50% 50% no-repeat rgb(55, 65, 84);
-  background-image: url("headerlogo.png") 50% 50%; 
 	position: absolute;
 	bottom: 0;
 	left: 0;
